@@ -7,33 +7,31 @@
  ******************************************************************************/
 package org.phoebus.applications.pvtable;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.phoebus.core.types.ProcessVariable;
 import org.phoebus.framework.selection.Selection;
 import org.phoebus.framework.spi.ContextMenuEntry;
+import org.phoebus.framework.workbench.ApplicationService;
 
 /** Entry for context menues that starts PV Table for selected ProcessVariable
  *
  *  @author Kay Kasemir
  */
-// @ProviderFor(ContextMenuEntry.class)
 @SuppressWarnings("rawtypes")
 public class ContextMenuPVTableLauncher implements ContextMenuEntry<ProcessVariable>
 {
-    private static final List<Class> supportedTypes = Arrays.asList(ProcessVariable.class);
+    private static final List<Class> supportedTypes = List.of(ProcessVariable.class);
 
     @Override
     public String getName()
     {
-        return PVTableApplication.NAME;
+        return PVTableApplication.DISPLAY_NAME;
     }
 
     @Override
     public Object getIcon()
     {
-        // TODO Auto-generated method stub
         return null;
     }
 
@@ -46,11 +44,10 @@ public class ContextMenuPVTableLauncher implements ContextMenuEntry<ProcessVaria
     @Override
     public ProcessVariable callWithSelection(final Selection selection) throws Exception
     {
-        final PVTableInstance instance = new PVTableInstance();
+        final PVTableInstance instance = (PVTableInstance) ApplicationService.findApplication(PVTableApplication.NAME).create();
         final List<ProcessVariable> pvs = selection.getSelections();
         for (ProcessVariable pv : pvs)
             instance.getModel().addItem(pv.getName());
-        instance.start();
         return null;
     }
 }
